# hft-simlab

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  requirements.txt
core/: Cargo.toml
core/examples/: ladder_demo.rs
core/src/: book.rs  events.rs  fill.rs  fill_tables.rs  impact.rs  latency.rs  lib.rs  npz.rs
core/tests/: replay_npz.rs
core/tests/fixtures/: tiny.npz
docs/: JOURNAL.md  P34_AUTOREGRESSIVE_DESIGN.md  PHASE4_ABLATION_DESIGN.md
experiments/ablation/: run_ablation.py
experiments/figures/: p13_stylized_facts.py
experiments/kaggle/: README.md  autoreg_book.py  p32_train_trades.py  p35_generate.py  p36_autoregressive.py
paper/: DRAFT.md  FIGURES.md  NOTES.md
refs/: README.md
scripts/: p0_backtest.py  p0_convert.py  p12_bench.py  p12_parity.py  p13_measure.py  p22_fill_calibrate.py  p22_fill_label.py  p23_latency_calibrate.py  p24_impact_calibrate.py  p25_gen_fill_tables.py  p31_pack_trades.py  p33_validate.py  p34_denorm.py  p37_gen_to_npz.py  record_market.sh
